# traccia-experiments

./: README.md  main.py  pyproject.toml
basic/: e-commerce-order-processing-pipeline.py  simple-trace-without-llm.py  traccia-basic.py  traccia-with-groq--basic.py
tests/: test_groq_api.py
